--- a/TODO
+++ b/TODO
@@ -1,12 +1,16 @@
 
 Desktop: 
-  ☐ Remake service handleing
-  ☐ Make most recently used service primary
-  ☐ Make list of connected services
+  ✔ Remake service handleing @done(24-09-23 17:58)
+  ✔ Make most recently used service primary @done(24-09-23 17:58)
+  ☐ Make list of connected services @started(24-09-23 17:58)
   ☐Plugin Handler:
-    ☐ Filesystem Loading @started(24-08-20 11:44)
-    ☐ Plugin Tenplate
-    ☐ 
+    ✔ Filesystem Loading @started(24-08-20 11:44) @done(24-09-23 17:58) @lasted(4w6d6h14m54s)
+    ☐ Plugin Tenplate @started(24-09-23 17:59)
+    ☐Config Helper:
+      ☐ Make config added missing entries 
+      ☐ Cache config to memory
+
+
 
 Browser: 
   ☐ Rename extenstion to OpenMediaShare
